--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,7 +25,7 @@
             android:gravity="center"
             android:paddingBottom="4dp"
             android:text="@string/displayingCategory"
-            android:textColor="@color/colorLightGray" />
+            android:textColor="@color/colorWhite" />
 
     </android.support.design.widget.AppBarLayout>
 
