--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#D81B60</color>
     <color name="colorGray">#424242</color>
     <color name="colorLightGray">#EFEFEF</color>
+    <color name="colorWhite">#FFFFFF</color>
 </resources>
