Fixed a bug with prepositions in non-custom template titles, added a CT example, changed a mutator and edited help text

--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -145,6 +145,9 @@
             <item
                 android:id="@+id/action_exampleTemplate14"
                 android:title="@string/customTemplateExample14" />
+            <item
+                android:id="@+id/action_exampleTemplate15"
+                android:title="@string/customTemplateExample15" />
         </menu>
     </item>
 
