Added random word form option to the menu

--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -88,6 +88,12 @@
         app:showAsAction="never" />
 
     <item
+        android:id="@+id/action_randomWordForm"
+        android:checkable="true"
+        android:title="@string/action_randomWordForm"
+        app:showAsAction="never" />
+
+    <item
         android:id="@+id/action_titleDecorations"
         android:checkable="true"
         android:title="@string/action_titleDecorations"
